tests/fixtures/invalid/bytes_mod_bool.py
# Cannot modulo Bytes and Bool
x: bytes = b"hello" % True
